--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,57 +4,51 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/backgroundColor"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/background" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/titleMarginTop"
+            android:text="@string/titleText"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/titleTextSize"
+            android:textStyle="italic" />
 
         <EditText
             android:id="@+id/name_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_marginTop="@dimen/editText_margin_top"
-            android:backgroundTint="@android:color/white"
+            android:backgroundTint="@android:color/black"
             android:hint="@string/name_editText"
             android:inputType="textCapWords"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/titleMarginTop"
-            android:text="@string/titleText"
-            android:textColor="@color/titleTextColor"
-            android:textSize="@dimen/titleTextSize"
-            android:textStyle="italic" />
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/introImage_marginTop"
+            android:adjustViewBounds="true"
             android:src="@drawable/main_img" />
 
         <Button
-            android:onClick="startQuiz"
             android:id="@+id/start_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/startButton_marginTop"
             android:background="@color/startButtonColor"
+            android:onClick="startQuiz"
             android:text="@string/startButtonText"
             android:textColor="@android:color/white"
             android:textSize="@dimen/startButtonTextSize"
             android:textStyle="italic" />
-
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
