--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="titleTextColor">#D50000</color>
     <color name="startButtonColor">#80000000</color>
-
+    <color name="backgroundColor">#E0E0E0</color>
 </resources>
