--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="startButtonColor">#80000000</color>
     <color name="backgroundColor">#E0E0E0</color>
+    <color name="Black_Color">#000000</color>
+    <color name="White_Color">#FFFFFF</color>
 </resources>
